# Computational-Geometry

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui
Task_1/: README.md  package-lock.json  package.json
Task_1/src/: AnswScreen.js  App.js  Button.js  EditBox.js  colors.js
Task_2/: .gitignore  CMakeLists.txt  README.md  canvas.cpp  canvas.h  fileloader.cpp  fileloader.h  guilogs.cpp  guilogs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp
Task_4/: CMakeLists.txt  canvas.cpp  canvas.h  fileloader.cpp  fileloader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.h
